--- a/exercicios/022/fundo006.html
+++ b/exercicios/022/fundo006.html
@@ -13,10 +13,18 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            /*
+                shorthand - background
+                color > image > position > repeat > [size] > attachment
+
+                background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+                background-size: cover;
+            */
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +36,8 @@
     
     <main>
         <h1>Teste imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores repellendus ipsum officia beatae ipsam sunt, doloremque maiores sapiente, qui impedit incidunt odit eius perspiciatis nam eligendi voluptatem. Accusamus, sequi odit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur commodi nulla porro ratione fuga aut, aliquam, vel consectetur sunt iusto ab ducimus nobis. Magnam, quia voluptates. Magnam fuga blanditiis tenetur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic deserunt molestias excepturi expedita repudiandae? Minima perspiciatis, reiciendis aut, itaque vero ullam inventore commodi odio magni accusantium doloribus quo expedita magnam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores repellendus ipsum officia beatae ipsam sunt, doloremque maiores sapiente, qui impedit incidunt odit eius perspiciatis nam eligendi voluptatem. Accusamus, sequi odit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur commodi nulla porro ratione fuga aut, aliquam, vel consectetur sunt iusto ab ducimus nobis. Magnam, quia voluptates. Magnam fuga blanditiis tenetur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic deserunt molestias excepturi expedita repudiandae? Minima perspiciatis, reiciendis aut, itaque vero ullam inventore commodi odio magni accusantium doloribus quo expedita magnam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quam, fuga placeat atque ipsum est aspernatur dolor deleniti esse eum eius temporibus officia corrupti natus, cum nihil harum voluptatum pariatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, ad obcaecati atque ratione maxime nemo incidunt nostrum sit non cumque suscipit. Eaque, adipisci vero! Unde a quod doloribus ipsam nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita, eaque, sint minus voluptate sed cum dolorem quisquam voluptatum, aliquam quia. Voluptas omnis id ea officia alias laudantium quod repudiandae. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae nisi sunt obcaecati cumque ipsam ducimus minus aliquam eligendi quidem reprehenderit, hic adipisci doloribus suscipit excepturi odit odio quam nemo commodi? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non odio neque laboriosam itaque nihil. Esse consequuntur velit aliquid obcaecati, aliquam cum eligendi perferendis. Laudantium expedita amet facere possimus adipisci. Inventore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum temporibus suscipit voluptas vitae doloremque obcaecati voluptates sapiente assumenda, similique illo, saepe ipsam quas eveniet sed pariatur deleniti libero cum magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, explicabo quibusdam corrupti, nam enim debitis animi iusto alias esse maiores dignissimos tempore aut aliquam dolore assumenda atque sed unde? Soluta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod animi vitae voluptates nemo consequatur illum commodi reprehenderit labore ducimus! Omnis saepe quasi laboriosam ipsa ipsam sapiente mollitia. Optio, reiciendis cum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem corporis commodi autem, quaerat aspernatur odit et aperiam non optio aliquam! Quibusdam quidem odio non in dignissimos commodi aut voluptatem ipsa! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, error! Quidem commodi a, culpa ratione accusantium iure illo hic, aut maiores aliquid alias. Labore sint laborum optio, nesciunt atque facere! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt libero accusantium a exercitationem laboriosam amet quidem perspiciatis obcaecati, nam aperiam sed, quo modi error. Doloremque fuga iure expedita quae esse?
+        </p>
     </main>
 
 </body>
